RDF validation requirements updated

--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -1210,7 +1210,7 @@ Definition:\\
 $\geq n R. \top \sqcap \leq n R. \top $ is exact unqualified cardinality restriction where $n \in \mathbb{N}$. ($\top$ can be dropped in short writing.)
 \subsection{Simple Example}
 
-\tb{ToDo. OWL 2 DL}
+%\tb{ToDo. OWL 2 DL}
 
 \begin{ex}
 # ShEx
@@ -3604,7 +3604,7 @@ examples:
   \item If one or more dc:coverage are present, suggest the use of one of its sub-properties, dcterms spatial or dcterms:temporal.
 \end{itemize}
 
-\end{itemize}
+\end{document}
 
 \input{DL-Check}
 
