--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -3604,6 +3604,26 @@ examples:
   \item If one or more dc:coverage are present, suggest the use of one of its sub-properties, dcterms spatial or dcterms:temporal.
 \end{itemize}
 
+\section{Cardinality Shortcuts}
+
+requirement:
+
+\begin{itemize}
+	\item 
+\end{itemize}
+
+\subsection{Description}
+
+\begin{itemize}
+  \item In most Library applications, these tend to appear in pairs, with repeatable / non-repeatable establishing max cardinality and optional / mandatory establishing min cardinality.
+	\item Optional \& Non-Repeatable = [0,1]
+  \item Optional \& Repeatable = [0,*]
+  \item Mandatory \& Non-Repeatable = [1,1]
+  \item Mandatory \& Repatable = [1,*]
+\end{itemize}
+
+
+
 \end{document}
 
 \input{DL-Check}
