--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -346,7 +346,7 @@ Without reasoning, these constraints won't be validated as \ms{:Luke} is not wit
 \begin{ex}
 # ShEx
 # ----
-<FeelingForce> { (  
+:Jedi { (  
     :attackingBySword xsd:boolean | 
     :attackingByForce xsd:boolean ) }
 \end{ex}
@@ -365,15 +365,22 @@ Without reasoning, these constraints won't be validated as \ms{:Luke} is not wit
     owl:allValuesFrom xsd:boolean ] .
 \end{ex}
 
-\begin{itemize}
-	\item :FeelingForce $\equiv$ 1 :attackingBySword (range xsd:boolean) XOR 1 :attackingByForce (range xsd:boolean)
-\end{itemize}
+A Jedi is either attacking by sword or attacking by force but not both, as such a fight won't be a fair one.
 
 \begin{DL}
 A $\equiv$ $\forall$ :attackingBySword . xsd:boolean \\
 B $\equiv$ $\forall$ :attackingByForce . xsd:boolean \\ 
 :FeelingForce $\sqsubseteq$ ($\neg$ A $\sqcap$ B) $\sqcup$ (A $\sqcap$ $\neg$ B) \\
 \end{DL}
+
+\begin{ex}
+:Luke :attackingBySword true .
+:DarthSidious 
+    :attackingByForce true ;
+    :attackingBySword true ;
+\end{ex}
+
+Luke is a Jedi, but Darth Sidious is not. 
 
 \subsection{Not Expressible by OWL 2 DL But by Other Constraint Languages}
 
