--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -433,14 +433,11 @@ validation by query answering with OWL 2 DL reasoning & \textsc{N2exptime} \\
 
 What is considered by rdf validation w/o reasoning, corresponds to performing SPARQL queries.  It is known that performing SPARQL queries is in \textsc{Pspace}-Complete \cite{Perez2009}. Since OWL 2 profiles are based on DL-$Lite$ family and query answering in OWL 2 QL is in \textsc{Logspace} (or rather in AC$^0$ ) \cite{Calvanese2007}, so is the constraint validation by queries with  reasoning. Furthermore, TBox reasoning in OWL 2 QL is in \textsc{Ptime} \cite{Calvanese2007}, hence complete query rewriting as well as combined complexity (reasoning and than querying) is in \textsc{Ptime} \cite{Artale2009}, \cite{Calvanese2007}.  With the more expressive profile OWL 2 DL, reasoning is in \textsc{N2exptime} \cite{owl2profiles2008} which is a class of considerably higher complexity.
 
-
-\tb{ToDO for Andy and Erman: please include references}
-
 \section{Related Work}
 
 \section{Conclusion and Future Work}
 
-\bibliography{paper1.bb}{}
+\bibliography{../../literature/literature}{}
 \bibliographystyle{plain}
 \setcounter{tocdepth}{1}
 %\listoftodos
