slide changes has been done.

--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -161,6 +161,28 @@
   Url                      = {http://www.inderscience.com/info/inarticle.php?artid=57760}
 }
 
+
+@article{Perez2009,
+ author = {P{\'e}rez, Jorge and Arenas, Marcelo and Gutierrez, Claudio},
+ title = {Semantics and Complexity of SPARQL},
+ journal = {ACM Trans. Database Syst.},
+ issue_date = {August 2009},
+ volume = {34},
+ number = {3},
+ month = sep,
+ year = {2009},
+ issn = {0362-5915},
+ pages = {16:1--16:45},
+ articleno = {16},
+ numpages = {45},
+ url = {http://doi.acm.org/10.1145/1567274.1567278},
+ doi = {10.1145/1567274.1567278},
+ acmid = {1567278},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Complexity, RDF, SPARQL, query language, semantic Web},
+}
+
 @Article{BoschMathiak2014,
   Title                    = {Use Cases Related to an Ontology of the Data Documentation Initiative},
   Author                   = {Bosch, Thomas and Mathiak, Brigitte},
